--- a/merit_coworkers/templates/merit_coworkers/info.html
+++ b/merit_coworkers/templates/merit_coworkers/info.html
@@ -1,2 +1,5 @@
-{{ coworker }}
+<h1>{{ coworker.first_name }}{{ coworker.last_name }}</h1>
+{% for kudo in coworker.kudo_set.all %}
+    {{ kudo.comment }}
+{% endfor %}
 
